Added: Config to make every mob spawn as a blight (be careful with that) (#102)
Changed: Disabling custom heart rendering will now override and disable health text settings (#104)
Fixed: Mobs not receiving extra attack damage or potion effects if their health modifier is very high. This removes the subtractions of difficulty as stats are selected. This may result in harder hitting mobs, even with default settings. (#100)
Fixed (maybe): Desync of health on server when Scaling Health is not allowed to modify health (#104)

1.3.14
Added: Localization key for difficulty meter text.
Fixed: Distance calculations overflowing, resulting in unkillable entities with NaN max health. Bugged entities should fix themselves when you get close to them. (#89)
Fixed: Returning from the End through the portal counting as "dying", potentially resulting in changes to health or difficulty. (#91)
Fixed: Server crash when lunar phases are enabled (#97)

1.3.13
Fixed: Server crash

1.3.12
Added: Config to add difficulty multipliers for different moon phases. Category is difficulty/lunar_phases in the config file. This feature is disabled by default.
Added: Config for XP cost to use heart containers (default is 3 levels)
Added: An outline on your last (highest) heart, if you have more than 10. Can be disabled or changed to any color (default is white)
Added: Config for food consumption (exhaustion) of bonus player regen. Value also increased. Default is 0.1 (still many times less than vanilla regen), old value was 0.025.
Added: Particle effects for heart container and cursed/enchanted hearts (#57)
Added: Sound effects for cursed/enchanted hearts (#57)
Added: More tooltips!
Added: ???
Fixed: All rows of hearts drawing, instead of just the top two (FPS boost for players with lots of hearts)
Fixed: Some other minor heart rendering issues

1.3.11